welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  def verif(){
  var vuBiscuit : Boolean = false
  var i : Int = 0
  for(i <- 1 to 6){
    avance()
    if (estSurBiscuit){
      vuBiscuit = true
    }
  }
  for(i <- 1 to 6){
    recule()
  }
}
  while (vuBiscuit == false){
    verif()
    droite()
    avance()
    gauche()
  }
}
